--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "hridoy",
   "license": "ISC",
   "dependencies": {
+    "bson": "^6.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
